--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: book
 
 book:
-  title: "양자 역학"
+  title: "기하학"
   author: "Norah Jones"
   date: "2/11/2024"
   page-navigation: true
@@ -12,7 +12,7 @@ book:
     - index.qmd
     - part: src/part1/part1.qmd
       chapters:
-      - src/part1/1.qmd
+      - src/part1/affine_space.qmd
 
     - part: src/figure/figure.qmd
       chapters:
