--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 book:
   title: "기하학"
-  author: "Norah Jones"
+  author: "Julia-Kaeri@github"
   date: "2/11/2024"
   page-navigation: true
 
